Add example for books

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@ Much of his work involves the advocacy of user-centered design. His books all ha
 
 <br/><br/>In this book, he mentions a number of design principles. One of the most important design principles that he mentions is Affordance. Through this book, Norman introduces the term <b>perceived affordance</b> which defines action posibilities that are perceivable or recognise by the user/actor. Section below will show the descriptions of the affordance, perceivable affordance and signifiers mentioned by Norman
 			</p>
+			<div class="book-background">
+				<div class="book-cover"></div>
+			</div>
 		</div>
 		<div class="container">
 			<h2 id="affordance">Affordance</h2>
-			<p id="content">This book is one of the best selling book by Donald A.Norman whos is a cognitive scientist and usability engineer. This book explains about how design is a way of communicating between user and the object. This book was published in 1988 with the title of <b>"The Psychology of Everyday Things"</b> and was later changed to <b>"The Design of Everyday Things"</b>
-
-<br/><br/>In this book, he mentions a number of design principles. One of the most important design principles that he mentions is Affordance. Through this book, Norman introduces the term <b>perceived affordance</b> which defines action posibilities that are perceivable or recognise by the user/actor. Section below will show the descriptions of the affordance and perceivable affordance mentioned by Norman</p>
+			<p id="content">The term affordance used by Norman was taken from J.J Gibson's book; <span name="italic-title">"The Senses Considered as Perceptual Systems"</span>. Affordance is a relationship between an object and its user. This relationship determine how the object is used by the user. For example, a cup affords something that can contain a liquid and the cup handle affords the user to slip their finger into it which then affords holding and carrying. An affordance only exist when the user sees it.</p>
 			
 		</div>
 		<div class="container">
