--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div class="header">
+			<a class="go-back" href="../../index.html">Go back</a>
 			<h1 class="title">Don A. Norman</h1>
 		</div>
 		<div class="nav">
@@ -30,7 +31,7 @@ Much of his work involves the advocacy of user-centered design. His books all ha
 		</div>
 		<div class="container">
 			<h2 id="book-title">The Design of Everyday Things</h2>
-			<p id="content">This book is one of the best selling book by Donald A.Norman whos is a cognitive scientist and usability engineer. This book explains about how design is a way of communicating between user and the object. This book was published in 1988 with the title of <b>"The Psychology of Everyday Things"</b> and was later changed to <b>"The Design of Everyday Things"</b>
+			<p id="content">This book is one of the best selling book by Donald A.Norman whos is a cognitive scientist and usability engineer. This book explains about how design is a way of communicating between user and the object. This book was published in 1988 with the title of <span id="italic-title">"The Psychology of Everyday Things"</span> and was later changed to <span id="italic-title">"The Design of Everyday Things"</span>
 
 <br/><br/>In this book, he mentions a number of design principles. One of the most important design principles that he mentions is Affordance. Through this book, Norman introduces the term <b>perceived affordance</b> which defines action posibilities that are perceivable or recognise by the user/actor. Section below will show the descriptions of the affordance, perceivable affordance and signifiers mentioned by Norman
 			</p>
@@ -40,23 +41,32 @@ Much of his work involves the advocacy of user-centered design. His books all ha
 		</div>
 		<div class="container">
 			<h2 id="affordance">Affordance</h2>
-			<p id="content">The term affordance used by Norman was taken from J.J Gibson's book; <span name="italic-title">"The Senses Considered as Perceptual Systems"</span>. Affordance is a relationship between an object and its user. This relationship determine how the object is used by the user. For example, a cup affords something that can contain a liquid and the cup handle affords the user to slip their finger into it which then affords holding and carrying. An affordance only exist when the user sees it.</p>
-			
+			<p id="content">The term affordance used by Norman was taken from J.J Gibson's book; <span id="italic-title">"The Senses Considered as Perceptual Systems"</span>. Affordance is a relationship between an object and its user. This relationship determine how the object is used by the user. For example, a cup affords something that can contain a liquid and the cup handle affords the user to slip their finger into it which then affords holding and carrying. An affordance only exist when the users see it.
+			<br/>
+			<br/>
+			An Example of an affordance taken from his book is a door plate which affords pushing because there are no handles to pull and a door knob which affords pulling.
+			</p>
+			<div class="example">
+				<div class="door-back1">
+					<div class="door-pull"></div>
+				</div>
+				<div class="door-back">
+					<div class="door-push"></div>
+				</div>
+				
+			</div>
 		</div>
 		<div class="container">
 			<h2 id="perceived-affordance">Perceived Affordance</h2>
-			<p id="content">This book is one of the best selling book by Donald A.Norman whos is a cognitive scientist and usability engineer. This book explains about how design is a way of communicating between user and the object. This book was published in 1988 with the title of <b>"The Psychology of Everyday Things"</b> and was later changed to <b>"The Design of Everyday Things"</b>
-
-<br/><br/>In this book, he mentions a number of design principles. One of the most important design principles that he mentions is Affordance. Through this book, Norman introduces the term <b>perceived affordance</b> which defines action posibilities that are perceivable or recognise by the user/actor. Section below will show the descriptions of the affordance and perceivable affordance mentioned by Norman
-			
+			<p id="content">Unlike the affordance that was explained by J.J Gibson, Norman came up with his own definition of affordance which is <b>perceived affordance</b>. A perceived affordance is a concept of affordance that depend on the user's status such as their goals, history, and experience. Perceived affordance predict the possibility of a user to interact with the object based on the past experience of the user. As an example, the video below will show the example of affordance.
+			<br/>
+			<br/>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/UtulTXJLGOI?start=6.03" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</p>
 		</div>
 		<div class="container">
 			<h2 id="signifier">Signifier</h2>
-			<p id="content">This book is one of the best selling book by Donald A.Norman whos is a cognitive scientist and usability engineer. This book explains about how design is a way of communicating between user and the object. This book was published in 1988 with the title of <b>"The Psychology of Everyday Things"</b> and was later changed to <b>"The Design of Everyday Things"</b>
-
-<br/><br/>In this book, he mentions a number of design principles. One of the most important design principles that he mentions is Affordance. Through this book, Norman introduces the term <b>perceived affordance</b> which defines action posibilities that are perceivable or recognise by the user/actor. Section below will show the descriptions of the affordance and perceivable affordance mentioned by Norman
-			
+			<p id="content">Another good example cited from Norman's book is a glass. Where glass affords transparency and at the same time it's physical structure also blocks the passage of physical objects. Therefore, glass affords transparency and support. Even though a glass is a good example of an affordance however, it may also causes confusion between user. Transparency of a glass has benefited people however, many people has injured themself walking or running towards a glass. There are some affordance that cannot be perceived therefore, signifiers can be used to give people a hint of an object interaction. A signifier can be intentional and deliberate.
 			</p>
 		</div>
 		<div class="footer"><p>VC WebMedia 1, 11836210, Aswin Putra</p></div>
